Fix spacing of portfolio section

--- a/styles.css
+++ b/styles.css
@@ -295,9 +295,33 @@ nav {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
+.portfolio_banner_card span {
+    display: inline-block;
+    margin-bottom: 8px;
+    font-size: 24px;
+}
+
+.portfolio_banner_card h4 {
+    font-size: 19.2px;
+    font-weight: 600;
+}
+
+.portfolio_banner_card p {
+    font-weight: 500;
+}
+
 @media (width > 576) {
     .service_grid {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    .portfolio_grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+    .portfolio_banner {
+        grid-template-columns: repeat(2, 1fr);
+        text-align: left;
     }
 }
 
@@ -377,6 +401,19 @@ nav {
     }
 
     .service_grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .portfolio_container :is(.section_header, .section_description) {
+        text-align: left;
+        margin-inline-start: unset;
+    }
+
+    .portfolio_grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .portfolio_banner {
         grid-template-columns: repeat(3, 1fr);
     }
 }
